<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ibrahimImgDet1"
            android:layout_width="272dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/detached1" />

        <TextView
            android:id="@+id/ibrahimTxtDet1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TxtType1Display"
            android:text="@string/ibrahimTxtDetached1" />

        <CheckBox
            android:id="@+id/ibrahimDetPChbx1"
            android:layout_width="134dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/ibrahimVirtualChx" />

        <CheckBox
            android:id="@+id/ibrahimDetVChbx1"
            android:layout_width="134dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/ibrahimPhysicalChx" />

        <ImageView
            android:id="@+id/ibrahimImgDet2"
            android:layout_width="272dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/detached2" />

        <TextView
            android:id="@+id/ibrahimTxtDet2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TxtType1Display"
            android:text="@string/ibrahimTxtDetached2" />

        <CheckBox
            android:id="@+id/ibrahimDetVChbx2"
            android:layout_width="135dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/ibrahimVirtualChx" />

        <CheckBox
            android:id="@+id/ibrahimDetPChbx2"
            android:layout_width="135dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/ibrahimPhysicalChx" />

        <ImageView
            android:id="@+id/ibrahimImgDet3"
            android:layout_width="272dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/detached3" />

        <TextView
            android:id="@+id/ibrahimTxtDet3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TxtType1Display"
            android:text="@string/ibrahimTxtDetached3" />

        <CheckBox
            android:id="@+id/ibrahimDetPChbx3"
            android:layout_width="134dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/ibrahimVirtualChx" />

        <CheckBox
            android:id="@+id/ibrahimDetVChbx3"
            android:layout_width="134dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/ibrahimPhysicalChx" />

        <ImageView
            android:id="@+id/ibrahimImgDet4"
            android:layout_width="272dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/detached4" />

        <TextView
            android:id="@+id/ibrahimTxtDet4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TxtType1Display"
            android:text="@string/ibrahimTxtDetached4" />

        <CheckBox
            android:id="@+id/ibrahimDetVChbx4"
            android:layout_width="133dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/ibrahimVirtualChx" />

        <CheckBox
            android:id="@+id/ibrahimDetPChbx4"
            android:layout_width="133dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="@string/ibrahimPhysicalChx" />

        <Button
            android:id="@+id/ibrahimDetAddBtn"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:onClick="onClick"
            android:text="@string/ibrahimTxtInterestBtn" />

        <Button
            android:id="@+id/ibrahimDetNextBtn"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:onClick="onClick"
            android:text="@string/ibrahimTxtNextBtn" />
    </LinearLayout>
</ScrollView>
